--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <p id="dayNight" title="Nachtmodus/Tagmodus" onclick="changeDayNight()"><i id="dayNightSwitch" class="fas fa-sun"></i></p>
     </div>
     <nav id="leftNav">
-        <ul>
+        <ul id="smallStat">
             <li id="amount">ByteCoins: 0</li>
             <li id="amountSecond">Coins Per Second: 0</li>
             <li id="coinsPerClick">Coins Per Click: 1</li>
