--- a/index.html
+++ b/index.html
@@ -52,7 +52,6 @@
         <li class="stat" title="overclockVideocards">Overclocked Videocards: 0</li>
         <li class="stat" title="underclockVideocards">Underclocked Videocards: 0</li>
         <li class="stat" title="lootedDrops">Looted Drops: 0</li>
-        <li class="stat" title="caughtThiefs">Caught Thiefs: 0</li>
     </ul>
 </div>
 <div id="shopPage" class="invisible page">
@@ -95,6 +94,19 @@
     <h1 class="pageHeader">About</h1>
     <p id="closeChangelog" class="invisible">X</p>
     <ul id="changeList">
+        <li id="0.5.0.2">
+            <div>
+                <h3>Version 0.5.0.2</h3>
+                <ul class="changeInfos">
+                    <li> - Thiefs wieder entfernt!</li>
+                    <br>
+                    <li> - Verbesserung des Aussehens der Seite</li>
+                    <br>
+                    <li> - Die GPU und Overclocks wurden preislich balanced und einige GPU gebufft.</li>
+                    <br>
+                </ul>
+            </div>
+        </li>
         <li id="0.5.0.1">
             <div>
                 <h3>Version 0.5.0.1</h3>
