--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@
         <li class="setting" id="volumeSetting" onclick="changeVolume()">Mute Sound</li>
         <li class="setting" id="modeSetting" onclick="changeDayNight()">Darkmode</li>
         <li class="setting" onclick="resetGame()">Reset Game</li>
+        <li class="setting" id="healthSetting" onclick="changeCoinhealthLook()">Coinhealth: Progessbar</li>
     </ul>
 </div>
 <div id="aboutPage" class="invisible page">
