first multitouch version
- added multitouch(not perfect) for
  mobile
- new gpus

--- a/index.html
+++ b/index.html
@@ -33,8 +33,7 @@
     </nav>
 </header>
 <div id="clickCenter">
-    <img id="clickPicture" draggable="false" src="images/clickPicture.png" onclick="clickCoin()"
-         ondragstart="return false;">
+    <img id="clickPicture" draggable="false" src="images/clickPicture.png" ondragstart="return false;">
     <p id="myProgress">100%</p>
 </div>
 <div id="statsPage" class="invisible page">
@@ -95,6 +94,17 @@
     <h1 class="pageHeader">About</h1>
     <p id="closeChangelog" class="invisible">X</p>
     <ul id="changeList">
+        <li id="0.5.0.3">
+            <div>
+                <h3>Version 0.5.0.3</h3>
+                <ul class="changeInfos">
+                    <li> - Zahlreiche neue GPUs hinzugefügt!</li>
+                    <br>
+                    <li> - Ein alternativer Style für die Coinhealthanzeige</li>
+                    <br>
+                </ul>
+            </div>
+        </li>
         <li id="0.5.0.2">
             <div>
                 <h3>Version 0.5.0.2</h3>
