--- a/index.html
+++ b/index.html
@@ -6,15 +6,15 @@
     <link rel="icon" type="image/png" href="images/favicon.png">
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" id="style" type="text/css" href="css/day.css">
-    <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
-    <!--Austauschen durch lokale Version-->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bowser/1.9.3/bowser.min.js"></script>
-    <!--Austauschen durch lokale Version-->
+    <link rel="stylesheet" type="text/css" href="css/perfect-scrollbar.css">
+    <script src="js/jquery.min.js"></script>
+    <script defer src="js/fontawesome-all.js"></script>
+    <script src="js/perfect-scrollbar.min.js"></script>
     <script src="js/upgrade.js"></script>
     <script src="js/videocard.js"></script>
     <script src="js/overclock.js"></script>
     <script src="js/event.js"></script>
+    <script src="js/data.js"></script>
     <script src="js/scripts.js"></script>
 </head>
 <body onload="loadCache()">
@@ -51,6 +51,7 @@
         <li class="stat" title="overclockVideocards">Overclocked Videocards: 0</li>
         <li class="stat" title="underclockVideocards">Underclocked Videocards: 0</li>
         <li class="stat" title="lootedDrops">Looted Drops: 0</li>
+        <li class="stat" title="extremOverclockedVideocards">Extreme overclocked Videocards: 0</li>
     </ul>
 </div>
 <div id="shopPage" class="invisible page">
@@ -88,60 +89,58 @@
         <li class="setting" id="modeSetting" onclick="changeDayNight()">Darkmode</li>
         <li class="setting" onclick="resetGame()">Reset Game</li>
         <li class="setting" id="healthSetting" onclick="changeCoinhealthLook()">Coinhealth: Progessbar</li>
+        <li class="setting" onclick="">Start Tutorial again</li>
     </ul>
 </div>
 <div id="aboutPage" class="invisible page">
     <h1 class="pageHeader">About</h1>
-    <p id="closeChangelog" class="invisible">X</p>
-    <ul id="changeList">
-        <li id="0.5.0.3">
-            <div>
-                <h3>Version 0.5.0.3</h3>
-                <ul class="changeInfos">
-                    <li> - Zahlreiche neue GPUs hinzugefügt!</li>
-                    <br>
-                    <li> - Ein alternativer Style für die Coinhealthanzeige</li>
-                    <br>
+    <ul id="pointList">
+    <li>
+        <div id="rulesContainer">
+            <div class="menuToggler" onclick="toogleMenuByName('description')">
+                <h3 class="headerMenuTitle">Übers Spiel</h3>
+            </div>
+            <p id="description" class="invisible">Dieses Spiel namens Bytecoin Clicker gehört zur Genre der <a href="https://de.wikipedia.org/wiki/Clicker_Games">Clicker Games</a>.
+                Das Grundelement dieses Spieles besteht darin durch Klicken auf den schwarzen Kreis die Ingamewährung ByteCoin zu erhalten. Durch diese Währung ist es einem möglich im Shop Upgrades zukaufen. Diese können z.B die Anzahl der Währung anheben die
+                pro Sekunde automatisch ermint werden. Da es sich um ein Clicker Game handelt in der es sich um eine Kryptowährung dreht sind hier auch GPUs auffindbar im Shop. Zusätzlich hat dieser schwarze Kreis in der Mitte eine Lebensanzeige. Wenn diese auf
+                0% heruntefällt wird ein sogenannter "Loot" gedropt. Durch Anklicken dieses "Loot" erhält man eine gewisse Anzahl von der Ingamewährung. Es gibt auch sogenannte "Special Events". Diese tauchen ab und zu oft und haben oft ein positiven Effekt.
+            </p>
+        </div>
+
+        <li>
+            <div id="changelogContainer">
+                <div class="menuToggler" onclick="toogleMenuByName('changelogList')">
+                    <h3 class="headerMenuTitle">Changelog</h3>
+                </div>
+                <ul id="changelogList" class="invisible">
                 </ul>
             </div>
         </li>
-        <li id="0.5.0.2">
-            <div>
-                <h3>Version 0.5.0.2</h3>
-                <ul class="changeInfos">
-                    <li> - Thiefs wieder entfernt!</li>
-                    <br>
-                    <li> - Verbesserung des Aussehens der Seite</li>
-                    <br>
-                    <li> - Die GPU und Overclocks wurden preislich balanced und einige GPU gebufft.</li>
-                    <br>
+        <li>
+            <div id="controlsContainer">
+                <div class="menuToggler" onclick="toogleMenuByName('controlsList')">
+                    <h3 class="headerMenuTitle">Steuerung</h3>
+                </div>
+                <ul id="controlsList" class="invisible">
+                    <li>Taste S - öffnet den Shop</li>
+                    <li>Taste Esc - schließt jede offene Seite</li>
+                    <li>Mittelclick - Im Shop erscheint eine Info zu dem Item</li>
+                    <li>Linksclick - Shop: Kauft/Verkauft das Item Coin: Löst einen Coinclick aus</li>
                 </ul>
             </div>
         </li>
-        <li id="0.5.0.1">
-            <div>
-                <h3>Version 0.5.0.1</h3>
-                <ul class="changeInfos">
-                    <li> - Thiefs die deine Bytecoins klauen wenn sie den mittleren Coin erreichen. Durch Klicken eleminierst du sie</li>
-                    <br>
-                    <li> - Kleine visuelle Verbesserungen im Einstellungsfenster</li>
-                    <br>
-                    <li> - Overclockingitem für die Radeon R9 295X2</li>
-                </ul>
+    <li>
+        <div id="opensourceContainer">
+            <div class="menuToggler" onclick="toogleMenuByName('opensourceList')">
+                <h3 class="headerMenuTitle">Open Source</h3>
             </div>
-        </li>
-        <li id="0.5">
-        <div>
-            <h3>Version 0.5</h3>
-            <ul class="changeInfos">
-                <li> - Durch Mittelklick im Shop werden nun Informationen zu den einzelnen Items angezeigt</li>
-                <br>
-                <li> - Neue Grafikkarte Radeon R9 295X2</li>
-                <br>
-                <li> - Bugfixes </li>
+            <ul id="opensourceList" class="invisible">
+                <li>jQuery <a href="https://github.com/jquery/jquery/blob/master/LICENSE.txt">Lizenz</a></li>
+                <li>Perfect Scrollbar <a href="https://github.com/utatti/perfect-scrollbar/blob/master/LICENSE">Lizenz</a></li>
+                <li>Font Awesome by Dave Gandy <a href="http://fontawesome.io">Website</a> <a href="https://creativecommons.org/licenses/by/4.0/">Lizenz</a></li>
             </ul>
         </div>
-        </li>
+    </li>
     </ul>
 </div>
 <div id="mobileMessage" class="invisible">
@@ -161,10 +160,11 @@
     <h3 id="itemName"></h3>
     <p id="closeP" onclick="document.getElementById('itemShowCase').classList.add('invisible')">X</p>
 </div>
-<div id="changelogScreen" class="invisible">
-    <h3 id="changeVersion"></h3>
-    <p id="changeText"></p>
-    <p id="closeChamgeLog" onclick="document.getElementById('changelogScreen').classList.add('invisible')">X</p>
+<div id="xoverclockInfo" class="invisible">
+    <img id="xoverclockImage">
+    <div id="healthProgesss">
+        <div id="healthBar"></div>
+    </div>
 </div>
 <audio class="audioSource" id="audioplayer"></audio>
 <footer id="bottomBar">
