ASIC Miner Update
- aboutpage improved
- new gpus
- new pickaxes
- asic miner added

--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
 </div>
 <div id="aboutPage" class="invisible page">
     <h1 class="pageHeader">About</h1>
+    <p id="closeChangelog" class="invisible">X</p>
     <ul id="pointList">
     <li>
         <div id="rulesContainer">
